• Fixed FAQ sizing and spacing for various screen widths. • Fixed hover issue on Gamebox by adding Jquery PEP • Fixed Brigador shrinking • Cleaned up JS some

--- a/dev/styl/master.styl
+++ b/dev/styl/master.styl
@@ -136,7 +136,9 @@ p
   
     
 #squirelogo
-  center(30em, 5%)
+  // center(30em, 5%)
+  // col(1/3)
+  width: 75%
   margin-top 4rem
   margin-bottom 1rem 
   
@@ -193,9 +195,10 @@ p
   // unstack()
   p
     text-align justify
-  // text-align left
+    // text-align left
+
   // margin-top 2.6rem
-  margin-top 5.1%
+  margin-top 4.3%
   
   +below(1440px)
     margin-top 4.3%
@@ -536,25 +539,34 @@ p.openletter
   font-size 1.4em
   
 p.faqtitle
-  font-size 3em 
-  
+  margin-top 0.5em
+  margin-bottom 0.5em  
+  font-size 3em
 p.faqQuestion
-  font-size 1.4em 
-  margin-bottom 0
+  font-size 1.8em 
+  +below(800px)
+    font-size 1.3em 
+  // margin-bottom 0
+  margin-bottom 0.5em  
   padding-bottom 0
   
 .faqAnswer
-  margin-bottom 3em 
+  margin-bottom 3em
   margin-top 0
   padding-top 0
   
-  p
+  font-size 1.2em 
+  line-height 1.4em
+  +below(800px)
     font-size 1em 
+  p
+    margin-bottom 1em
 
 .backhome
-  padding-top 4em 
+  // padding-top 4em 
+  margin-bottom 2em
   // text-align center
-  text-align left
+  // text-align left
   
 .fullcol
   col(1)
@@ -590,11 +602,7 @@ hr.splitterWithText
     col(5/16, gutter: 1.3, cycle: 3)
 
 .currentProjectsTitle
-  col(2/16, gutter: 1.3, cycle: 3)
-  +below(1100px)
-    col(4/16, gutter: 1.3, cycle: 3)
-  +below(800px)
-    col(6/16, gutter: 1.3, cycle: 3)
+  text-align center
   p
     line-height 1em
     font-size 1.1em  
@@ -602,6 +610,14 @@ hr.splitterWithText
     margin-top 0rem 
     font-weight bold
     // text-align center
+  col(2/16, gutter: 1.3, cycle: 3)
+  +below(1100px)
+    col(4/16, gutter: 1.3, cycle: 3)
+    p
+      line-height 1em
+      font-size 0.9em
+  +below(800px)
+    col(6/16, gutter: 1.3, cycle: 3)
       
 .currentProjectsLineTwo
   col(11/16, gutter: 1.3, cycle: 3)
@@ -887,11 +903,11 @@ hr.splitterWithText
   background-size cover 
   
 .brigador.gameBox
-  background url("../img/brigador-bg.png") center center no-repeat
+  background url("../img/brigador-bg.png") top center no-repeat
   background-color #0A0100 
-  -webkit-background-size contain 
-  -o-background-size contain
-  background-size contain 
+  -webkit-background-size cover 
+  -o-background-size cover
+  background-size cover 
 
 .gonehome.gameBox
   background url("../img/gonehome-bg.jpg") center center
